# hotel

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  architecture.md
data/: guests.tsv
include/: App.h  Badge.h  BadgeSprite.h  DeskDecision.h  Guest.h  Hotel.h  Room.h  Scene.h
include/scenes/: SceneCheckIn.h
src/: App.cpp  Hotel.cpp  Room.cpp  SceneCheckIn.cpp  main.cpp
